--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Happy Birthday Shivanshu</title>
+    <title>Happy Birthday Ranita</title>
     <meta charset="utf-8" />
     <meta name="language" content="en-us" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -58,7 +58,7 @@
 						<source src="song.mp3" type="audio/mpeg">
 					</audio>
 					<br />
-					<span class="disc">Disclaimer : Hey Man, This time again stuck with Autoplay thing, Just Play it Manually, Scroll your screen and Enjoy! For Better view Use Laptop </span>
+					<span class="disc">Disclaimer : Hey Man, This time again stuck with Autoplay thing, Just Play it Manually, Scroll your screen and Enjoy!</span>
 				</center>
 			</div>
 		</div>
@@ -67,21 +67,21 @@
 			<div class="columns"> 
 				<div id="code" class="column is-6 is-offset-2">
 					<span class="comments">/**</span><br />
-					<span class="space"/><span class="comments">* Today, the 29th day of May, is your birthday.</span><br />
+					<span class="space"/><span class="comments">* Today, the 11th day of May, is your birthday.</span><br />
 					<span class="space"/><span class="comments">* So I created a webpage to celebrate this special day.</span><br />
 					<span class="space"/><span class="comments">*/</span><br />
-					Boy u = <span class="keyword">new</span> Boy(<span class="string">"Shivanshu Mathur"</span>);<br />
-					<span class="comments">// May 28th, when the bell rang, your age increased </span><br />
+					Girl u = <span class="keyword">new</span> Girl(<span class="string">"Podu Puti"</span>);<br />
+					<span class="comments">// May 10th, when the bell rang, your age increased </span><br />
 					Date currentTime = <span class="keyword">new</span> Date(); <br />
 					SimpleDateFormat formatter = <span class="keyword">new</span> SimpleDateFormat(<span class="string">"yyyy-MM-dd HH:mm:ss"</span>);<br />
 					String dateString = formatter.format(currentTime);<br />
-					if( dateString.equals(<span class="string">"2020-05-29 00:00:00"</span>) ){</br>
+					if( dateString.equals(<span class="string">"2022-05-11 00:00:00"</span>) ){</br>
 						u.age ++;</br>
 					}</br>
 					<span class="comments">// My best wishes will be with you simultaneously.</span><br />
 					<span class="keyword">new</span> Thread (){<br />
 					@Override </br>
-					<span class="comments">// Forever and ever. I wish</span><br />
+					<span class="comments">// Forever and ever and ever. I wish</span><br />
 					while(true){</br>
 					<span class="comments">// luckiness,</span><br />
 					u.fortune ++;</br>
@@ -102,7 +102,7 @@
 			<div class="columns">
 				<div class="column is-12" id="copyright">
 					<center>
-						<p>Made with love by <a href="https://www.facebook.com/smilegupta.1998" target="_blank">Smile Gupta</a></p>
+						<p>Made with love by <a href="https://www.facebook.com/smilegupta.1998" target="_blank">Sayak Naskar</a></p>
 					</center>
 				</div>
 			</div>
@@ -111,7 +111,7 @@
       var offsetX = $("#loveHeart").width() / 2;
       var offsetY = $("#loveHeart").height() / 2 - 55;
       var together = new Date();
-      together.setFullYear(1999, 5, 29);
+      together.setFullYear(1998, 5, 11);
       together.setHours(8);
       together.setMinutes(0);
       together.setSeconds(0);
